themes/default/css/style.css
/* ... */
.comment-reply {
    float:right;
    font-style:italic;
    background:transparent url('../images/reply.png') center left no-repeat;
    padding-left:15px;

    /* IE Hacks */
    *margin-top:-24px;
    _margin-top:-24px;
}
.comment-body{
    margin-top:10px;
}
.comment-footer{
    margin:-40px 15px 20px 0;
    overflow:auto;
    /* IE Hacks */
    _overflow:visible;
    *overflow:visible;
    zoom:1;
}
.children li {
    width: 450px;
    float: right;
}
.comment-meta{
    font-style:italic;
    float:right;
    font-size:12px;
    color:#505050;
    margin-top:50px;

    /* IE Hacks */
    *margin-top:0px;
    _margin-top:0px;
}
.comment-time{
    background:url('../images/time.png') center left no-repeat;
    padding:0 15px 0 13px;
}
.comment-date{
    padding-right:7px;
}
.comment-avatar {
    float:right;

    /* IE Hacks */
    *margin-top:-60px;
    _margin-top:-60px;
}
.comment-bg{
    margin:40px 0 0 70px;
}
.nested-comment-bg{
    float:left;
    margin:-60px 0 0 17px;

    /* IE Hacks */
    *margin-top:-59px;
    _margin-top:-59px;
}
div.nested{
    margin-left:30px;
}
.recent-comments{
    font-size:12px;
    color:#5b5b5b;
    line-height:22px;
}
.recent-comments-intro{
    font-style:italic;
    clear:both;
    display:block;
    margin-top:15px;
}
.recent-posts-widget{
    font-size:12px;
    color:#5b5b5b;
    line-height:22px;
}
.recent-posts-widget{
    display:block;
    font-style:italic;
    clear:both;
    margin-top:0;
}
.recent-posts-widget-name{
    color:#5b5b5b;
}
.recent-posts-widget-item{
    margin-top:15px;
}

#footer a, #bottombar a {
    color: #5994af;
}
#footer a:hover, #bottombar a:hover {
    text-decoration: underline;
}

/* TABLES */
.stats {
    width:100%;
      -moz-border-radius-topright:5px;
    -moz-border-radius-topleft:5px;
    /* Linux Browsers */
    -khtml-border-top-right-radius:5px;
    -khtml-border-top-left-radius:5px;
    /* Webkit */
    -webkit-border-top-right-radius:5px;
    -webkit-border-top-left-radius:5px;
    /* CSS3 */
    border-top-right-radius:5px;
    border-top-left-radius:5px;
    border-top:1px solid #5C5C5C;
    border-left:1px solid #5C5C5C;
    border-right:1px solid #5C5C5C;
    color: #DDDDDD;
    /*font-family: 'georgia',arial,serif;*/
    font-size: 12px;
    height: 30px;
	margin-top:10px;
}
.stats .bg {
    background: url("../images/header-bg.png");
    background-repeat:repeat-x;
    color: #DDDDDD;
    /*font-family: 'georgia',arial,serif;*/
    font-size: 14px;
    height: 30px;

}
.stats .name { width:33%;padding-left:10px;padding-top:4px}
.stats .website { width:33%;padding-top:4px}
.stats .posts { width:33%;padding-top:4px}
.stats .tname {
	width:33%;
	padding-left:10px;
	padding-top:4px;
    color: #474747;
    /*font-family: 'georgia',arial,serif;*/
    font-size: 14px;
    height: 30px;
    border-bottom:1px solid #5C5C5C;
    vertical-align:middle;
    }
.stats .twebsite {
	width:33%;
	padding-top:4px;
    color: #474747;
    /*font-family: 'georgia',arial,serif;*/
    font-size: 14px;
    height: 30px;
    border-bottom:1px solid #5C5C5C;
    vertical-align:middle;
    }
.stats .tposts {
	width:33%;
	padding-top:4px;
    color: #474747;
    /*font-family: 'georgia',arial,serif;*/
    font-size: 14px;
    height: 30px;
    border-bottom:1px solid #5C5C5C;
    vertical-align:middle;
    }

/*  VOTES  */
.post-vote {
background: no-repeat scroll 14% 50% #CDCDCD;
border-radius: 3px 3px 3px 3px;
font-size: 0.9em;
padding: 4px 7px;
width: 80px;
float:right;
}
.vote span#imgoui, .avote span#imgoui {
display:block;
height: 18px;
width: 16px;
float: right;
position: absolute;
margin-left: 60px;
margin-top: -18px;
}
.vote span#imgoui{
background: url("../images/oui.png") no-repeat scroll 14% 50%;
}
.avote span#imgoui{
background: url("../images/oui-light.png") no-repeat scroll 14% 50%;
}
div.post_description div.tag-line {
margin : 5px 5px;
}
div.post_description span.post-tag {
margin: 0px 5px;
padding: 0px 6px 1px 6px;
background: #edbe59;
-moz-border-radius: 8px;
-khtml-border-radius: 8px;
-webkit-border-radius: 8px;
border-radius: 8px;
}
/********************************/
/**           PAGE STATUS      **/
/********************************/
#filter-status{
position:relative;
width:180px;
font-size:11px;
padding-bottom:13px;
padding-right:21px;
text-align:left;
}
#filter-order-action {
	display:block;
	float: right;
	font-size: 10px;
}
div.post_description div.tag-line {
    margin : 5px 5px;
}
span.tag a, span.user a {
	color:#000;
}
/*
div.tag-line span.tag a {
	color:#999;
}
div.tag-line span.tag {
	margin: 2px 2px;
	background: none;
	display: inline-block;
}
div.tag-line span.tag:before {
	background: none;
}
div.tag-line span.tag:after {
	background: none;
	content: ''
}
/*span.user {
	margin: 0px 5px;
    padding: 0px 6px 1px 6px;
	background: #78bf7b;
	-moz-border-radius: 8px;
	-khtml-border-radius: 8px;
	-webkit-border-radius: 8px;
	border-radius: 8px;
}*/
span.tag, span.user {
	position: relative;
	display: inline-block;
	height: 25px;
	min-height: 25px;
	line-height: 23px;
	text-shadow: rgba(255,255,255,.3) 0px 1px 0px;
	text-transform: lowercase;
	margin: 0 10px;
	margin-left: 20px;
}
span.tag{
	background: url(../images/tag-bg.png) repeat-x;
	color: rgba(114,76,38,1);
}
span.user{
	background: url(../images/user-bg.png) repeat-x;
	color: #303030;
}
span.tag:before, span.user:before {
	content: '';
	width: 18px;
	height: 25px;
	position: absolute;
	left: -18px;
}
span.tag:before{
	background: url(../images/tag-start.png);
}
span.user:before{
	background: url(../images/user-start.png);
}
span.tag:after, span.user:after {
	content: '';
	width: 8px;
	height: 25px;
	position: absolute;
	top: 0px;
	right: -8px;
}
span.tag:after{
	background: url(../images/tag-end.png);
}
span.user:after{
	background: url(../images/user-end.png);
}


div#filter-feed {
	background: url('../images/rss_24.png') no-repeat;
	padding-left : 25px;
	margin: 5px;
	line-height: 25px;
}
/* ... */

